--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,21 +1,49 @@
-<IfModule mod_rewrite.c>
-    <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
-    </IfModule>
+<IfModule mod_rewrite.c> 
 
-    RewriteEngine On
+<IfModule mod_negotiation.c> 
 
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+Options -MultiViews -Indexes 
 
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_URI} (.+)/$
-    RewriteRule ^ %1 [L,R=301]
+</IfModule> 
 
-    # Send Requests To Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+ 
+
+RewriteEngine On 
+
+ 
+
+# Handle Authorization Header 
+
+RewriteCond %{HTTP:Authorization} . 
+
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}] 
+
+ 
+
+# Redirect Trailing Slashes If Not A Folder... 
+
+RewriteCond %{REQUEST_FILENAME} !-d 
+
+RewriteCond %{REQUEST_URI} (.+)/$ 
+
+RewriteRule ^ %1 [L,R=301] 
+
+ 
+
+# Send Requests To Front Controller... 
+
+RewriteCond %{REQUEST_URI} !^/api 
+
+RewriteCond %{REQUEST_FILENAME} !-d 
+
+RewriteCond %{REQUEST_FILENAME} !-f 
+
+RewriteRule ^ index.php [L] 
+
+ 
+
+# Send Requests To API Front Controller... 
+
+RewriteRule ^api/.*$ /api/index.php [L] 
+
 </IfModule>
